Have extension popup display the URL for each of the user's tabs
In order to be able to get information about tab URLs in the
chrome.tabs.query method, we also needed to add the "tabs" permission
to the manifest.

--- a/app/popup.html
+++ b/app/popup.html
@@ -2,5 +2,6 @@
   <head></head>
   <body>
     <h1>We're running a Chrome extension!</h1>
+    <script type="text/javascript" src="popup.js"></script>
   </body>
 </html>
